hphp/test/zend/good/Zend/tests/use_function/no_global_fallback2.php.expectf

Fatal error: Cannot use function bar\test as test because the name is already in use in %s/no_global_fallback2.php on line 9
